# auto-anki-maker

./: .env.example  .gitignore  README.md  anki_example.py  main.py  pyproject.toml  test_card_creation.py  words.txt
auto_anki_maker/: __init__.py  anki_client.py  japanese_word.py  logging.py
tests/: test_anki_client.py
yasashii/: __init__.py  __main__.py  anki_client.py  japanese_word.py  logging.py
